<?xml version="1.0"?>
<package>
  <name>h4r_pan_tilt_camera</name>
  <version>0.0.0</version>
  <description>The h4r_pan_tilt_camera package</description>

  <maintainer email="cyborgx1@gmail.com">Christian Holl</maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>h4r_libsersyncproto</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>h4r_libsersyncproto</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>