<?xml version="1.0"?>
<package>
  <name>h4r_pantilt_mcu_avr</name>
  <version>0.0.0</version>
  <description>The h4r_pantilt_mcu_avr package containging the firmware for an Arduino Uno for using
  	it with pantilt node.</description>

  <maintainer email="cyborgx1@gmail.com">Christian Holl</maintainer>
  <author email="cyborgx1@gmail.com">Christian Holl</author>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>avr-libc</build_depend>
  <build_depend>gcc-avr</build_depend>
  <build_depend>h4r_pantilt_proto</build_depend>
  <build_depend>h4r_libsersyncproto</build_depend>

  <run_depend>avrdude</run_depend>
  <export>

  </export>
</package>